Add allowed-email gate and master panel

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PUBLIC_SUPABASE_URL="https://YOUR_PROJECT.supabase.co"
 PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
-
+SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
+MASTER_EMAIL="master@tudominio.com"
+PUBLIC_SITE_URL="https://tu-dominio.com"
+DEMO_MODE="0"
